hphp/hack/test/typecheck/explicit_type_collection/explicit_type_collection_passing_darray1.php.like_types.exp
File "explicit_type_collection_passing_darray1.php", line 6, characters 3-13:
  darray<arraykey, bool>
File "explicit_type_collection_passing_darray1.php", line 7, characters 10-11:
Invalid argument (Typing[4110])
File "explicit_type_collection_passing_darray1.php", line 3, characters 17-35:
Expected ~darray<string, bool> because it is an unenforceable type
File "explicit_type_collection_passing_darray1.php", line 5, characters 8-43:
But got darray<arraykey, bool>
